# RePlayer

./: .gitignore  AGENTS.md  CMakeLists.txt  IONPLAYER_IMPLEMENTATION_PLAN.md  README.md  TASKS.md  TASK_PROGRESS.md  build_portable.bat  main.py  requirements.txt
.github/workflows/: release.yml  windows-verify-package.yml
audio/: audio_player.h  mf_player.cpp  mf_player.h
core/: clock.cpp  clock.h  error.h  playback_coordinator.cpp  playback_coordinator.h  result.h  time_format.cpp  time_format.h
recording/: recorder.h  recording_player.cpp  recording_player.h  wasapi_recorder.cpp  wasapi_recorder.h  wav_writer.cpp  wav_writer.h
scripts/: verify_package.ps1
src/: main.cpp
src/replayer/: app.py  audio.py  models.py  recording.py  subtitles.py
state/: app_state.h  playback_mode.h
subtitles/: lrc_parser.cpp  lrc_parser.h  srt_parser.cpp  srt_parser.h  subtitle_line.h  subtitle_service.cpp  subtitle_service.h  subtitle_text_utils.cpp  subtitle_text_utils.h
tests/: test_doubles.h
tests/audio/: test_mf_player.cpp
tests/compare/: test_recording_player.cpp
tests/core/: test_playback_coordinator.cpp  test_time_format.cpp
tests/data/: sample.lrc  sample.srt
tests/recording/: test_wasapi_recorder.cpp  test_wav_writer.cpp
tests/state/: test_app_state.cpp
tests/subtitles/: test_lrc_parser.cpp  test_srt_parser.cpp  test_subtitle_service.cpp  test_subtitle_text_utils.cpp
tests/utils/: test_logger.cpp
ui/: main_window.cpp  main_window.h
utils/: logger.cpp  logger.h
